[project]
name = "job-management"
version = "0.1.0"
description = ""
authors = [
    {name = "500ping"}
]
readme = "README.md"

requires-python = ">=3.12,<4.0"

dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-restful (>=0.3.10,<0.4.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "alembic (>=1.15.2,<2.0.0)"
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
